JS Cycle: for To: add classes (text) to element created in order to fix text overflow outside element

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    font-family: "Press Start 2P";
+    font-size: 0.7rem;
+}
+
 .max-width-900{
     max-width: 900px;
 }
